pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-tls-multi-secrets.yml
---
kind: Secret
apiVersion: v1
metadata:
  namespace: default
  name: whoami-tls-extra

data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0t
  tls.key: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0t

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-tls-multi-secrets
  namespace: default

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - first.localhost
      secretName: whoami-tls
    - hosts:
        - second.localhost
      secretName: whoami-tls-extra
  rules:
    - host: first.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
    - host: second.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
